[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pymusicassembler"
version = "0.1.0"
description = "Pure-Python reader, writer, and player for Music Assembler SID songs"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Josh Bailey" }]
keywords = ["sid", "c64", "music assembler", "tracker", "chiptune", "pyresidfp"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = ["pysidtracker>=0.2"]

[project.optional-dependencies]
# Audio rendering drives an emulated SID via pyresidfp; everything else
# (read/write/play/register logs) is pure stdlib.
audio = ["pyresidfp>=0.17"]
dev = [
    "black>=24",
    "pylint>=3",
    "pyresidfp>=0.17",
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-xdist>=3",
]

[project.scripts]
pymusicassembler = "pymusicassembler.cli:main"

[project.urls]
Homepage = "https://github.com/anarkiwi/pymusicassembler"
Source = "https://github.com/anarkiwi/pymusicassembler"
Issues = "https://github.com/anarkiwi/pymusicassembler/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["pymusicassembler"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pylint.main]
disable = "all"
enable = [
    "redefined-builtin",
    "unused-import",
    "unused-argument",
    "cell-var-from-loop",
    "unused-variable",
    "unbalanced-tuple-unpacking",
    "stop-iteration-return",
    "reimported",
    "dangerous-default-value",
    "pointless-statement",
    "using-constant-test",
    "raise-missing-from",
]
